--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,14 +7,22 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
+    <!--    openAndCloseNavigationDrawer-->
+    <string name="navigation_draw_open">open navigation drawer</string>
+    <string name="navigation_draw_close">close navigation drawer</string>
+    <!--    -->
+
+
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
-<!--    NavigationDrawerMenu-->
+    <!--    NavigationDrawerMenu-->
     <string name="home">Home</string>
     <string name="download">Download</string>
     <string name="report">Report</string>
     <string name="profile">Profile</string>
     <string name="about">About</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
